--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,6 @@
 
     <!-- Toolbar -->
     <string name="app_name">Sound Recorder</string>
-    <string name="action_licenses">Licenses</string>
-    <string name="action_settings">Settings</string>
     <string name="tab_title_record">Record</string>
     <string name="tab_title_saved_recordings">Saved Recordings</string>
 
@@ -22,33 +20,25 @@
     <string name="dialog_title_delete">Confirm Delete...</string>
     <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
     <string name="dialog_title_licenses">Open Source Licenses</string>
-    <string name="dialog_title_share">Share File</string>
-    <string name="dialog_title_rename">Rename File</string>
-    <string name="dialog_title_options">Options</string>
+    <string name="dialog_title_share">分享</string>
+    <string name="dialog_title_rename">重命名</string>
+    <string name="dialog_title_options">功能选择</string>
 
-    <string name="dialog_file_share">Share File</string>
-    <string name="dialog_file_rename">Rename File</string>
-    <string name="dialog_file_delete">Delete File</string>
-    <string name="dialog_action_cancel">Cancel</string>
-    <string name="dialog_action_ok">OK</string>
-    <string name="dialog_action_yes">Yes</string>
-    <string name="dialog_action_no">No</string>
+    <string name="dialog_file_share">分享</string>
+    <string name="dialog_file_rename">重命名</string>
+    <string name="dialog_file_delete">批量删除</string>
+    <string name="dialog_action_cancel">取消</string>
+    <string name="dialog_action_ok">确认</string>
+    <string name="dialog_action_yes">确认</string>
+    <string name="dialog_action_no">取消</string>
 
-    <string name="no_saved_recordings_message">No saved recordings</string>
-    <string name="pause_recording_button">Pause</string>
-    <string name="resume_recording_button">Resume</string>
+    <string name="no_saved_recordings_message">没有保存</string>
+    <string name="pause_recording_button">暂停</string>
+    <string name="resume_recording_button">恢复</string>
     <string name="default_file_name">My Recording</string>
     <string name="record_prompt">Tap the button to start recording</string>
     <string name="record_in_progress">Recording</string>
+    <string name="send_to">发送到...</string>
 
-    <string name="send_to">Send to</string>
-
-    <!-- Preferences -->
-    <string name="pref_high_quality_key">pref_high_quality</string>
-    <string name="pref_high_quality_title">Enable High Quality Recording</string>
-    <string name="pref_high_quality_desc">Record in CD Quality</string>
-    <string name="pref_about_key">pref_about</string>
-    <string name="pref_about_title">About</string>
-    <string name="pref_about_desc">v%s</string>
 
 </resources>
